<resources>
    <string name="app_name">Poker Holdem</string>
    <string name="loading_text">Loading…</string>
    <string name="auth_data_not_found">The application could not find\nyour authentication data.\nPlease, create a new account or sign in.</string>
    \
    <string name="create_account_in_auth">create a new account</string>
    <string name="sign_in">sign in</string>
    <string name="name">name</string>
    <string name="password">password</string>
    <string name="create_acc">create account</string>
    <string name="rate">rate</string>
    <string name="create_lobby">create lobby</string>
    <string name="less_than">&lt;</string>
    <string name="greater_than">></string>
    <string name="all_in">ALL IN</string>
    <string name="check">CHECK</string>
    <string name="fold">FOLD</string>
    <string name="raise">RAISE</string>
    <string name="you_disconnected">YOU HAVE BEEN\nDISCONNECTED!</string>
    <string name="ok">OK</string>
    <string name="undefined">undefined</string>
    <string name="clear">CLEAR</string>
    <string name="players_count">Players: </string>



</resources>
