<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.CreateAccFragment"
    android:background="@drawable/main_menu_background">

    <ImageView
        android:id="@+id/choose_image_iv"
        android:layout_width="@dimen/create_account_image_with"
        android:layout_height="@dimen/create_account_image_heigth"
        android:background="@color/splash_primairy"
        android:layout_gravity="center_vertical|left"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/login_fragments_window_width"
        android:layout_height="@dimen/login_fragments_window_height"
        android:layout_gravity="center_vertical|right"
        android:orientation="vertical"
        android:background="@drawable/button"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/name_input_field"
            android:layout_width="@dimen/sign_in_input_field_width"
            android:layout_height="@dimen/sign_in_input_field_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/sign_in_input_field_margin_top"
            android:orientation="horizontal"
            >
            <TextView
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:textSize="@dimen/sign_in_input_field_text_size"
                android:textAlignment="center"
                android:textColor="@color/my_black"
                android:textStyle="normal"/>

            <EditText
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/name_et_create"
                android:layout_width="@dimen/sign_in_window_et_width"
                android:layout_height="match_parent"
                android:textColor="@color/my_black"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/password_input_field"
            android:layout_width="@dimen/sign_in_input_field_width"
            android:layout_height="@dimen/sign_in_input_field_height"
            app:layout_constraintTop_toBottomOf="@+id/name_input_field"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/sign_in_input_field_margin_top"
            android:orientation="horizontal"
            >
            <TextView
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/password"
                android:textSize="@dimen/sign_in_input_field_text_size"
                android:textAlignment="center"
                android:textColor="@color/my_black"
                android:textStyle="normal"/>
            <EditText
                android:id="@+id/password_et_create"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="@dimen/sign_in_window_et_width"
                android:layout_height="match_parent"
                android:textColor="@color/my_black"
                android:inputType="textPassword"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:id="@+id/create_account_btn"
            android:layout_width="@dimen/sign_in_window_button_width"
            android:layout_height="@dimen/sign_in_window_button_height"
            android:background="@drawable/button"
            app:layout_constraintTop_toBottomOf="@id/password_input_field"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/sign_in_window_button_margin_top"
            android:text="@string/create_acc"
            android:textSize="@dimen/sign_in_window_button_text_size"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>